--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link
     rel="stylesheet"
     href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"
